--- a/ch07.html
+++ b/ch07.html
@@ -32,11 +32,12 @@ index.html
         <td><input id="table_name" name="table_name" type="text" /></td>
       </tr>
       <tr>
-        <td>Relational Database Name:</td><td><select name="rdbms_name" id="rdbms_name">
-                                            <option value="postgres">PostgrSQL</option>
-                                            <option value="mysql">MySQL</option>
-                                            <option value="sqlite">SQLite</option>
-                                            </select></td>
+        <td>Relational Database Name:</td>
+        <td><select name="rdbms_name" id="rdbms_name">
+              <option value="postgres">PostgrSQL</option>
+              <option value="mysql">MySQL</option>
+              <option value="sqlite">SQLite</option>
+            </select></td>
      </tr>
      <tr>
       <td>Name For New Spreadsheet:</td>
