--- a/ch07.html
+++ b/ch07.html
@@ -166,3 +166,42 @@ the added values.
   // Using the "load" event to execute the function "populate"
   window.addEventListener('load', populate);
 </script>
+
+<!--
+Code Example 7-7
+Form code taken from http://www.tutorialspoint.com/bootstrap/bootstrap_forms.htm
+-->
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<div>
+<form class="form-horizontal" role="form">
+   <div class="form-group">
+      <label for="firstname" class="col-sm-2 control-label">First Name</label>
+      <div class="col-sm-10">
+         <input type="text" class="form-control" id="firstname" 
+            placeholder="Enter First Name">
+      </div>
+   </div>
+   <div class="form-group">
+      <label for="lastname" class="col-sm-2 control-label">Last Name</label>
+      <div class="col-sm-10">
+         <input type="text" class="form-control" id="lastname" 
+            placeholder="Enter Last Name">
+      </div>
+   </div>
+   <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+         <div class="checkbox">
+            <label>
+               <input type="checkbox"> Remember me
+            </label>
+         </div>
+      </div>
+   </div>
+   <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+         <button type="submit" class="btn btn-default">Sign in</button>
+      </div>
+   </div>
+</form>
+</div>
